Migrate AutoWeka to the JRE running WEKA
1. AutoWeka was using installed JRE in operating system for model evaluation rather than the JRE is currently running WEKA. To make WEKA and AutoWeka using the same JRE, some environment variables (JAVA_HOME and PATH) are modified when initializing AutoWeka.

2. The aeatk.jar in smac/lib use reflective access to JDK internals. JAVA 17 deny such access by default unless we open it by adding an option (--add-opens=java.base/java.lang=ALL-UNNAMED) to _JAVA_OPTIONS before launching smac.

3. Filter out a noisy warning about _JAVA_OPTIONS.