@@ -174,6 +174,12 @@ public class AutoWEKAClassifier extends AbstractClassifier implements Additional
         resamplingArgsMap.put(Resampling.CrossValidation, "numFolds=10");
         resamplingArgsMap.put(Resampling.MultiLevel, "numLevels=2[$]autoweka.instancegenerators.CrossValidation[$]numFolds=10");
         resamplingArgsMap.put(Resampling.RandomSubSampling, "numSamples=10:percent=66");
+        try {
+            Class.forName("autoweka.SetEnvironmentVariablesForAutoWeka");
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+            throw new RuntimeException(e.getMessage());
+        }
     }
     /** Arguments for the default evaluation method. */
     static final String DEFAULT_RESAMPLING_ARGS = resamplingArgsMap.get(DEFAULT_RESAMPLING);
@@ -403,6 +409,10 @@ public class AutoWEKAClassifier extends AbstractClassifier implements Additional
                                 }
                                 //log.info(line);
                             } else if(line.matches(".*WARN.*")) {
+                                // filter out noisy warning message
+                                if (line.matches(".*Picked up _JAVA_OPTIONS: --add-opens=java.base/java.lang=ALL-UNNAMED.*")) {
+                                    continue;
+                                }
                                 log.warn(line);
                             } else if(line.matches(".*ERROR.*")) {
                                 log.error(line);
